--- a/Views/Entidades/Ver.cshtml
+++ b/Views/Entidades/Ver.cshtml
@@ -138,6 +138,33 @@
     </div>
 </div>
 
+
+<div class="container ">
+    <div class="row mt-3">
+        <div class="col-6">
+
+            <div class="chart-container">
+                <canvas id="media-bar-chart" width="100" height="300"></canvas>
+            </div>
+        </div>
+        <div class="col-6">
+
+            <div class="chart-container">
+                <canvas id="min-bar-chart" width="100" height="300"></canvas>
+            </div>
+
+        </div>
+        <div class="col-6">
+
+            <div class="chart-container">
+                <canvas id="max-bar-chart" width="100" height="300"></canvas>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+
 <script>
 
 
