--- a/Views/ValoresReferencia/Edit.cshtml
+++ b/Views/ValoresReferencia/Edit.cshtml
@@ -1,1 +1,42 @@
-﻿
+﻿@model Entidades.Models.ValoresReferencia
+
+@{
+    ViewData["Title"] = "Editar Valor Referencia";
+}
+
+<br />
+
+<br />
+<h2 class="text-primary">Editar Valor Referencia</h2>
+
+<div class="container mt-3">
+    <form method="post" asp-action="Edit">
+
+        <div class="row justify-content-center mt-3">
+            <div class="col-4">
+                <label asp-for="Minimo" class="form-label">Umbral mínimo</label>
+                <input asp-for="Minimo" class="form-control" />
+                <span asp-validation-for="Minimo" class="text-danger"></span>
+            </div>
+            <div class="col-4">
+                <label asp-for="Maximo" class="form-label">Umbral máximo</label>
+                <input asp-for="Maximo" class="form-control" />
+                <span asp-validation-for="Maximo" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="row justify-content-center mt-3">
+
+            <div class="col-8">
+                <button type="submit" class="btn btn-primary" asp-route-id="@Model.Id">Actualizar</button>
+                
+            </div>
+        </div>
+    </form>
+</div>
+<div class="container ">
+    <div class="row justify-content-center mt-3">
+        <div class="col-md-4">
+            <partial name="_VistaCrearVolver" />
+        </div>
+    </div>
+</div>
