--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,7 +1,7 @@
 html {
   font-size: 14px;
 }
-
+/**/
 @media (min-width: 768px) {
   html {
     font-size: 16px;
@@ -15,4 +15,7 @@ html {
 
 body {
   margin-bottom: 60px;
+}
+.nav-link > li > a:hover {
+    color: burlywood !important;
 }
