--- a/Views/Campos/Create.cshtml
+++ b/Views/Campos/Create.cshtml
@@ -26,7 +26,7 @@
                 </div>
 
                 <div class="form-group">
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-primary">Crear</button>
                 </div>
             </form>
         </div>  
