--- a/Views/Entidades/Ver.cshtml
+++ b/Views/Entidades/Ver.cshtml
@@ -138,8 +138,17 @@
     </div>
 </div>
 
+<hr />
+<div class="container">
+    <div class="row">
+        <div id="informacionEstadistica">
+
+        </div>
+    </div>
+</div>
 
 <div class="container ">
+
     <div class="row mt-3">
         <div class="col-6">
 
