--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -60,9 +60,9 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Informes</a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" asp-area="" asp-controller="Informes" asp-action="ListaEntidades">ListaEntidades</a>
-                                <a class="dropdown-item" asp-area="" asp-controller="Informes" asp-action="CantidadMuestrasPorCampo">CantidadMuestrasPorCampo</a>
-                                <a class="dropdown-item" asp-area="" asp-controller="Informes" asp-action="GetMuestrasYValores">GetMuestrasYValores</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Informes" asp-action="ListaEntidades">Lista Entidades</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Informes" asp-action="CantidadMuestrasPorCampo">Cantidad Muestras Por Campo</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Informes" asp-action="GetMuestrasYValores">Muestras Y Valores</a>
                                 <a class="dropdown-item" href="#">Another action</a>
 
                                 <div class="dropdown-divider"></div>
