--- a/Views/ValoresReferencia/Edit.cshtml
+++ b/Views/ValoresReferencia/Edit.cshtml
@@ -3,24 +3,26 @@
 @{
     ViewData["Title"] = "Editar Valor Referencia";
 }
-
+@section Scripts{
+    <script src="/js/valoresReferenciaEdit.js">  </script>
+}
 <br />
 
 <br />
 <h2 class="text-primary">Editar Valor Referencia</h2>
 
 <div class="container mt-3">
-    <form method="post" asp-action="Edit">
+    <form method="post" asp-action="Edit" id="formulario">
 
         <div class="row justify-content-center mt-3">
             <div class="col-4">
                 <label asp-for="Minimo" class="form-label">Umbral mínimo</label>
-                <input asp-for="Minimo" class="form-control" />
+                <input asp-for="Minimo" id="minimo" class="form-control" />
                 <span asp-validation-for="Minimo" class="text-danger"></span>
             </div>
             <div class="col-4">
                 <label asp-for="Maximo" class="form-label">Umbral máximo</label>
-                <input asp-for="Maximo" class="form-control" />
+                <input asp-for="Maximo" id="maximo" class="form-control" />
                 <span asp-validation-for="Maximo" class="text-danger"></span>
             </div>
         </div>
