--- a/Views/Campos/Create.cshtml
+++ b/Views/Campos/Create.cshtml
@@ -13,6 +13,11 @@
             <form method="post" asp-action="Create">
                 <div class="form-group">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group ">
+                        <label asp-for="Id"></label>
+                        <input asp-for="Id" class="form-control" placeholder="Ingrese Id" />
+                        <span asp-validation-for="Id" class="text-danger"></span>
+                    </div>
                     <div class="form-group row">
                        
                             <label asp-for="Nombre"></label>
