--- a/Views/Entidades/Index.cshtml
+++ b/Views/Entidades/Index.cshtml
@@ -10,6 +10,7 @@
     <table id="tblEntidades" class="table table-striped table-bordered" style="width:100%">
         <thead>
             <tr>
+                <th></th>
                 <th>Id</th>
                 <th>Datos</th>
                 <th>Acciones</th>
@@ -17,7 +18,7 @@
         </thead>
 
     </table>
-
+    <button type="button" id="borrarEntidades" class="btn btn-danger">Borrar entidades seleccionadas</button>
 </div>
 @section Scripts{
     <script src="/js/entidades.js">  </script>
