--- a/Views/Muestras/Index.cshtml
+++ b/Views/Muestras/Index.cshtml
@@ -10,6 +10,7 @@
     <table id="tblMuestras" class="table table-striped table-bordered" style="width:100%">
         <thead>
             <tr>
+                <th>  </th>
                 <th>Id</th>
                 <th>IdEntidad</th>
                 <th>Fecha</th>
@@ -21,6 +22,7 @@
 
     </table>
 
+    <button type="button" id="borrarMuestras" class="btn btn-danger">Borrar muestras seleccionadas</button>
 </div>
 @section Scripts{
     <script src="/js/muestras.js">  </script>
