--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,20 +2,19 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Entidades</h1>
+
+<div class="alert alert-dismissible alert-info">
+    <h1 class="display-4 text-white text-center">Entidades</h1>
     
-<p class="lead">
-      
-        Cada entidad pertenece a un campo que tomando el ejemplo de la medicina podría ser una especialidad (Neumología, Oftalmología, etc). Estos campos también lo da de alta el usuario.
-        Las entidades poseen muestras, las muestras poseen variables y nombres de variables que dará de alta el usuario. Los valores de estas variables que componen una muestra los
-        cargará el usuario por importación mediante ficheros csv.
-        Cada muestra pertenece a un tipo de muestra que el usuario cargará previamente y nos permitirá categorizar las muestras. Si tomamos como ejemplo la medicina.
-        Un tipo de muestra podría ser una espirometría, un análisis de sangre, un electrocardiograma, etc.
-    </p>
+    <p class="mb-0 text-white text-center"> Aplicación para el seguimiento de entidades en base a sus variables dinámicas.</p>
 </div>
 
+
+
+
 <div class="container">
+
+
 
     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
         <div class="col d-flex align-items-start">
@@ -38,7 +37,7 @@
             <div>
                 <h3 class="fs-2 text-body-emphasis">Tipo de muestra</h3>
                 <p>Es un subconjunto de campos. Dentro de un campo existen 1 o varios tipos de muestra. POr ejemplo Campo: neomologia, los tipos de muestra podrian ser espiromtria, analisis de sangre,</p>
-                <a href="#" class="btn btn-primary">
+                <a  class="btn btn-primary" asp-area="" asp-controller="TipoMuestra" asp-action="Index">
                     Ver Tipos de muestra
                 </a>
             </div>
@@ -53,8 +52,8 @@
                     Para cargar una muestra debe existir <strong>tipo de muestra</strong>, <strong>la entidad</strong>, <strong>el campo al que pertence</strong>
                 </p>
                     
-                <a href="#" class="btn btn-primary">
-                    Cargar muestras
+                <a  class="btn btn-primary" asp-area="" asp-controller="Muestras" asp-action="Index">
+                    Muestras
                 </a>
             </div>
         </div>
@@ -65,36 +64,21 @@
         <div class="col-lg-6 mx-auto">
             <p class="lead mb-4">
 
-                Cada una de estas entidades tendrá una serie de variables que denominamos estáticas que dará de alta el usuario de la aplicación. Por ejemplo si estamos en el campo médico, las entidades serian pacientes y las variables estáticas pueden ser sus datos como el nombre, dirección, móvil, sexo, etc.
+                Cada una de estas entidades tendrá una serie de variables que denominamos estáticas que dará de alta el usuario de la aplicación. 
+                Por ejemplo si estamos en el campo médico, las entidades serian pacientes y las variables estáticas pueden ser sus datos como el nombre, 
+                dirección, móvil, sexo, etc.
 
 
             </p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
-                <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
+        
+                <a class="btn btn-primary btn-lg px-4 gap-3" asp-area="" asp-controller="Entidades" asp-action="Index">Listar</a>
+                <a class="btn btn-outline-secondary btn-lg px-4" asp-area="" asp-controller="Entidades" asp-action="Cargar">Cargar</a>
+
             </div>
         </div>
     </div>
-    <div class="px-4 py-5 my-5 text-center">
-
-        <h1 class="display-5 fw-bold text-body-emphasis">Campos</h1>
-        <div class="col-lg-6 mx-auto">
-            <p class="lead mb-4">
-
-                Cada entidad pertenece a un campo que tomando el ejemplo de la medicina podría ser una especialidad (Neumología, Oftalmología, etc). Estos campos también lo da de alta el usuario.
-
-
-            </p>
-
-            <p class="lead mb-4">
-                Las entidades poseen muestras, las muestras poseen variables y nombres de variables que dará de alta el usuario.
-            </p>
-            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
-                <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
-            </div>
-        </div>
-    </div>
+   
 </div>
 
 
@@ -106,6 +90,6 @@
 
         El objetivo de este trabajo es brindar una herramienta capaz de almacenar datos de forma abstracta para permitir su explotación en diferentes dominios de la aplicación,
         por ejemplo en la medicina, un instituto estadístico, un departamento de calidad, etc. pero sin importar el dominio concreto.
-        Por ello se ha optado esta forma abstracta de almacenar los datos en entidades.
+        
     </p>
 </div>
