--- a/Views/Entidades/Ver.cshtml
+++ b/Views/Entidades/Ver.cshtml
@@ -50,102 +50,128 @@
 
 <hr />
 <h2 class="text-primary">Evolución de la Entidad @Model.Id</h2>
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-6">
-            <form id="formDatosEvolucion">
-                <input type="hidden" name="idEntidad" value="@Model.Id" />
-                <fieldset >
-                 
-                   <div class="row">
-                       <div class="col-6">
-                            <div class="mt-3">
-                                <label for="camposSelect" class="form-label">Seleccione el Campo</label>
-                                <select id="camposSelect" class="form-select" name="idCampo">
-                                    <option value="0">Seleccione un Campo</option>
-                                    @foreach (var item in Model.CamposDto)
-                                    {
-                                        <option value="@item.Id">@item.Nombre</option>
-                                    }
 
-                                </select>
-                            </div>
-                       </div>
-                        <div class="col-6">
-                            <div class="mt-3">
-                                <label for="tipoMuestraSelect" class="form-label">Seleccione el Tipo de Muestra</label>
-                                <select id="tipoMuestraSelect" class="form-select" name="idTipoMuestra">
-                                    <option value="0">Seleccione un Tipo de muestra</option>
-                                    @foreach (var item in Model.TiposMuestraDto)
-                                    {
-                                        <option value="@item.Id">@item.Nombre</option>
-                                    }
-
-                                </select>
-                            </div>
-                        </div>
-                   </div>
-                  
-                    
-                   
-                    <div class="mt-3">
-                        <h3>Seleccione las varibles que queire visualizar</h3>
-                        <ul class="list-group">
-                            <li class="list-group-item">
-                                <input class="form-check-input me-1" type="checkbox" value="1" name="pintarValorReferencia" id="pintarValorReferencia">
-                                <label class="form-check-label stretched-link" for="pintarValorReferencia">Pintar valores de referencia?</label>
-                            </li>
-                         </ul>
-                        <div id="variables">
-                            
-                        </div>
-                      
-                    </div>
-                    <button type="button" id="btnEnviar" class="btn btn-primary mt-3">Submit</button>
-                </fieldset>
-            </form>
+@if(Model.CampoTipoMuestraPrimerCoinidencia == null)
+{
+     <div class="container mt-3">
+        <div class="row justify-content-center">
+            <div class="col-6">
+                <div class="alert alert-danger" role="alert">
+                    <p>Esta entidad no tiene ninguna muestra</p>
+                </div>
+             </div>
         </div>
-    
-       
+        <div class="row justify-content-center">
+            <div class="col-2">
+                <a asp-action="Index" class="btn btn-success form-control">Volver a lista </a>
+            </div>
+        </div>
     </div>
 
-</div>
-<!-- grafico,-->
+ 
+}
+else
+{
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-6">
+                <form id="formDatosEvolucion">
+                    <input type="hidden" name="idEntidad" value="@Model.Id" />
+                    <fieldset>
+
+                        <div class="row">
+                            <div class="col-6">
+                                <div class="mt-3">
+                                    <label for="camposSelect" class="form-label">Seleccione el Campo</label>
+                                    <select id="camposSelect" class="form-select" name="idCampo">
+                                        <option value="0">Seleccione un Campo</option>
+                                        @foreach (var item in Model.CamposDto)
+                                        {
+                                            
+         
+                                            <option value="@item.Id" selected="@(item.Id == Model.CampoTipoMuestraPrimerCoinidencia.IdCampo)">@item.Nombre</option>
+                                            
+                                        }
+
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="mt-3">
+                                    <label for="tipoMuestraSelect" class="form-label">Seleccione el Tipo de Muestra</label>
+                                    <select id="tipoMuestraSelect" class="form-select" name="idTipoMuestra">
+                                        <option value="0">Seleccione un Tipo de muestra</option>
+                                        @foreach (var item in Model.TiposMuestraDto)
+                                        {
+                                            <option value="@item.Id" selected="@(item.Id == Model.CampoTipoMuestraPrimerCoinidencia.IdTipoMuestra)">@item.Nombre</option>
+                                        }
+
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
 
 
-<div class="container-fluid">
-    <div class="row full-width-row">
-        
+
+                        <div class="mt-3">
+                            <h3>Seleccione las varibles que queire visualizar</h3>
+                            <ul class="list-group">
+                                <li class="list-group-item">
+                                    <input class="form-check-input me-1" type="checkbox" value="1" name="pintarValorReferencia" id="pintarValorReferencia">
+                                    <label class="form-check-label stretched-link" for="pintarValorReferencia">Pintar valores de referencia?</label>
+                                </li>
+                            </ul>
+                            <div id="variables">
+                            </div>
+
+                        </div>
+                        <button type="button" id="btnEnviar" class="btn btn-primary mt-3">Submit</button>
+                    </fieldset>
+                </form>
+            </div>
+
+
+        </div>
+
+    </div>
+    <!-- grafico,-->
+
+
+    <div class="container-fluid">
+        <div class="row full-width-row">
+
             <!-- Contenido de la fila que ocupa todo el ancho -->
             <div class="chart-container">
                 <canvas id="evolution-chart" width="100%" height="400"></canvas>
             </div>
-        
-    </div>
-</div>
-
-<hr />
-<div class="container">
-    <div class="row">
-        <div id="informacionEstadistica">
 
         </div>
     </div>
-</div>
 
-<div class="container ">
-
-    <div class="row mt-3">
-        <div class="col-12">
-
-            <div class="chart-container">
-                <canvas id="media-bar-chart" width="100" height="500"></canvas>
+    <hr />
+    <div class="container">
+        <div class="row">
+            <div id="informacionEstadistica">
             </div>
         </div>
-        
-
     </div>
-</div>
+
+    <div class="container ">
+
+        <div class="row mt-3">
+            <div class="col-12">
+
+                <div class="chart-container">
+                    <canvas id="media-bar-chart" width="100" height="500"></canvas>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+
+}
+
 
 
 <script>
