--- a/Views/ValoresReferencia/Index.cshtml
+++ b/Views/ValoresReferencia/Index.cshtml
@@ -12,6 +12,7 @@
     <table id="tblValoresReferencia" class="table table-striped table-bordered" style="width:100%">
         <thead>
             <tr>
+                <th></th>
                 <th>Nombre</th>
                 <th>Minimo</th>
                 <th>Maximo</th>
@@ -20,7 +21,7 @@
         </thead>
 
     </table>
-
+    <button type="button" id="borrarValores" class="btn btn-danger">Borrar valores seleccionados</button>
 </div>
 @section Scripts{
     <script src="/js/valoresReferencia.js">  </script>
