--- a/Views/Entidades/Ver.cshtml
+++ b/Views/Entidades/Ver.cshtml
@@ -135,46 +135,23 @@ else
 
     </div>
     <!-- grafico,-->
+    <style>
+        .chart-container {
+            
+            
+        }
+    </style>
 
-
-    <div class="container-fluid">
+    <div class="container-fluid mb-4">
         <div class="row full-width-row">
 
             <!-- Contenido de la fila que ocupa todo el ancho -->
-            <div class="chart-container">
-                <canvas id="evolution-chart" width="100%" height="400"></canvas>
-            </div>
 
-        </div>
-    </div>
-
-    <hr />
-    <div class="container">
-        <div class="row">
-            <div id="informacionEstadistica">
+            <div class="chart-container" >
+                <canvas id="evolution-chart" ></canvas>
             </div>
         </div>
     </div>
 
-    <div class="container ">
-
-        <div class="row mt-3">
-            <div class="col-12">
-
-                <div class="chart-container">
-                    <canvas id="media-bar-chart" width="100" height="500"></canvas>
-                </div>
-            </div>
-
-
-        </div>
-    </div>
-
+    
 }
-
-
-
-<script>
-
-
-</script>
