--- a/Views/Muestras/FormGraficaCampoYTipoMuestra.cshtml
+++ b/Views/Muestras/FormGraficaCampoYTipoMuestra.cshtml
@@ -29,10 +29,31 @@
                 </div>
                 
 
-                <button type="submit" class="btn btn-primary mt-3">Submit</button>
+                <button id="btnEnviar" class="btn btn-primary mt-3">Submit</button>
             </form>
 
 
         </div>
     </div>
 </div>
+<div class="container">
+    <div class="row">
+        <div id="informacionEstadistica">
+        </div>
+    </div>
+</div>
+<div class="container ">
+    <div class="row mt-3">
+        <div class="col-12">
+
+            <div class="chart-container">
+                <canvas id="media-bar-chart" width="100" height="500"></canvas>
+            </div>
+        </div>
+
+
+    </div>
+</div>
+@section Scripts{
+    <script src="/js/pintarGraficoEstadistico.js">  </script>
+}
