--- a/Views/Entidades/Ver.cshtml
+++ b/Views/Entidades/Ver.cshtml
@@ -125,7 +125,7 @@ else
                             </div>
 
                         </div>
-                        <button type="button" id="btnEnviar" class="btn btn-primary mt-3">Submit</button>
+                        <button type="button" id="btnEnviar" class="btn btn-primary mt-3">Consultar</button>
                     </fieldset>
                 </form>
             </div>
